<resources>
    <string name="app_name">Test</string>
    <string name="msg_no_data">Sorry, no data available now !</string>
    <string name="label_new_notification">New Notification</string>
    <string name="msg_active_since">User Active Since </string>
    <string name="label_seconds">Seconds </string>
    <string name="label_name">Name </string>
    <string name="label_desc">Description </string>
    <string name="label_comics">Comics </string>
    <string name="label_stories">Stories </string>
    <string name="label_events">Events </string>
    <string name="label_series">Series </string>
    <string name="label_links">Related Links </string>
    <string name="label_cancel">Cancel </string>
    <string name="label_search">Search </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
